# django-starter

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  development.env  docker-compose.yml  pyproject.toml
django_starter/core/: asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
django_starter/templates/: celery_demo.html
