[tool.poetry]
authors = ["naphal <naphal@naphal.net>"]
name = "django-starter"
version = "0.1.0"
description = ""
readme = "README.md"
packages = [{include = "django_starter"}]


[tool.poetry.dependencies]
celery = {extras = ["rabbitmq", "redis"], version = "^5.2.7"}
django = "^4.2.1"
psycopg = {extras = ["binary"], version = "^3.1.9"}
pydantic = {extras = ["dotenv"], version = "^1.10.8"}
python = "^3.11"
whitenoise = "^6.4.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
pytest-celery = "^0.0.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
max-line-length = 119


[tool.flake8]
exclude = [".venv/*","venv/*"]
ignore = ["E123","E128","E203","E266","E402","F405","E501","W503","E731","W601"]

[tool.isort]
skip = ["pyproject.toml", "poetry.lock", "Dockerfile", "docker-compose.yml"]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]

DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
