[project]
name = "django-starter"
version = "1.1.0"
description = "Django Starter Kit"
authors = ["naphal <naphal@naphal.net>"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.5.3",
    "django>=5.2.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest-celery>=1.2.0",
    "pytest-django>=4.11.1",
    "ruff>=0.12.3",
]
